# awesome-rag

./: .gitignore  README.md
notebooks/ragstack/: astra-vectorize.ipynb
recommendations/: README.md  pyproject.toml
recommendations/recommendations/: api.py  get_recommendation.py  index_products.py  products.csv  setup.py  setup_all.py  util.py
recommendations/recommendations/web/: Home.py
